update assistance & paginator & favorites budgets